--- a/jumbotron.css
+++ b/jumbotron.css
@@ -1,4 +1,5 @@
 /* Move down content because we have a fixed navbar that is 3.5rem tall */
 body {
   padding-top: 3.5rem;
+  background-image: url("https://image.freepik.com/vector-gratis/logotipo-speed-garage_74829-82.jpg");
 }
